tests/baselines/reference/callWithWrongNumberOfTypeArguments.errors.txt
==== tests/cases/compiler/callWithWrongNumberOfTypeArguments.ts (2 errors) ====
    function f<T, U>() { }
    
    f<number>();
    ~
!!! error TS4027: Signature expected 2 type arguments, got 1 instead.
    f<number, string>();
    f<number, string, number>();
    ~
!!! error TS4027: Signature expected 2 type arguments, got 3 instead.